cmake_minimum_required(VERSION 3.22)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled tp1_2/Entree.cpp tp1_2/Entree.h tp1_2/Tableau.cpp tp1_2/Tableau.h tp1_2/OldAgenda.cpp tp1_2/OldAgenda.h tp1_2/PtrAgenda.cpp tp1_2/PtrAgenda.h main/main.cpp tp3_4/Document.cpp tp3_4/Document.h tp3_4/mainTp3.cpp tp1_2/mainTp1.cpp tp3_4/Livre.cpp tp3_4/Livre.h tp3_4/Article.cpp tp3_4/Article.h tp3_4/Biblio.cpp tp3_4/Biblio.h tp3_4/docAbstract.cpp tp3_4/docAbstract.h tp3_4/DocumentAbstract.cpp tp3_4/DocumentAbstract.h tp3_4/LivreAbstract.cpp tp3_4/LivreAbstract.h tp3_4/ArticleAbstract.cpp tp3_4/ArticleAbstract.h)
